@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 201X-XX-XX  Release 7.30.0                                     ---
 ----------------------------------------------------------------------
 
+* renamed MGED "ps" command to "postscript" - Cliff Yapp
 * removed MGED commands em, e_muves, l_muves, lm, read_muves, t_muves
 	- Cliff Yapp
 * removed deprecated irprep tools - Cliff Yapp
